deployments/k8s/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sample-vue-app
  namespace: production
spec:
  replicas: 1
  selector:
    matchLabels:
      app: sample-vue-app
  template:
    metadata:
      labels:
        app: sample-vue-app
        ingress: sample-vue-app
    spec:
      containers:
        - image: 'marqaaron/sample-vue-app:latest'
          imagePullPolicy: IfNotPresent
          name: sample-vue-app
          ports:
            - containerPort: 8082
          readinessProbe:
            httpGet:
              path: /
              port: 8082
