deployments/k8s/service.yml
apiVersion: v1
kind: Service
metadata:
  name: sample-vue-app
  namespace: production
spec:
  ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: 8082
  selector:
    ingress: sample-vue-app
