deployments/k8s/ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    kubernetes.io/ingress.class: nginx
  name: sample-vue-app
  namespace: production
spec:
  rules:
    - host: codefresh.marqaaron.io
      http:
        paths:
          - backend:
              serviceName: sample-vue-app
              servicePort: 80
            path: /
  tls:
    - hosts:
        - codefresh.marqaaron.io
      secretName: codefresh-nginx-ingress-tls
